# callability

./: .gitignore  README.md
client/: .gitignore  pubspec.yaml
client/android/app/: build.gradle
client/lib/: main.dart  objectbox-model.json  objectbox.g.dart
client/lib/protobuf/: service.pb.dart  service.pbenum.dart  service.pbgrpc.dart  service.pbjson.dart
client/lib/src/: app.dart  dependencies.dart  logging.dart  routes.dart
client/lib/src/controller/: app_init.dart  controller.dart
client/lib/src/model/: app_settings.dart  call.dart  contact.dart  enums.dart  firebase_payloads.dart  group.dart  model.dart  preset.dart  schedule.dart
client/lib/src/pages/: app_router_page.dart  calls_page.dart  contacts_page.dart  group_detail_page.dart  groups_page.dart  home_page.dart  incoming_call_page.dart  login_page.dart  outgoing_call_page.dart  permissions_page.dart  preset_detail_page.dart  presets_page.dart  root_page.dart  settings_page.dart
client/lib/src/repositories/: db_repository.dart  repositories.dart  runtime_parameters.dart
client/lib/src/sample_data/: contacts.dart  groups.dart  presets.dart
client/lib/src/storage/: in_memory_storage.dart  persistent_storage.dart  storage.dart
client/lib/src/utils/: dialogs.dart  (+4 more)
server/: .gitignore  README.md  pyproject.toml
server/callability_server/: __init__.py  call_worker.py  check_health.py  firebase_utils.py  main.py  message_board.py  response_worker.py  server.py
server/protobuf/: __init__.py  service.proto  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
server/tests/: test_cli.py
(+47 files in other folders)
